--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full max-w-xs min-w-full mb-4"/>
             <button class="btn btn-primary w-full mb-4">generate</button>
         </div>
-        <div class="qr-code">
+        <div class="qr-code hidden">
             <img src="res/qr_code.png" alt="Qr Code" />
         </div>
     </div>
