--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
             <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full max-w-xs min-w-full mb-4"/>
             <button class="btn btn-primary w-full mb-4">generate</button>
         </div>
-        <div class="qr-code hidden">
-            <img src="res/qr_code.png" alt="Qr Code" />
+        <div class="qr-code">
+            <p>
+                Your generated QR code will be displayed here.
+            </p>
+            <ion-icon name="qr-code-outline" class="text-3xl mt-2"></ion-icon>
         </div>
     </div>
 </body>
