generate qr code

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </p>
         </header>
         <div class="form">
-            <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full max-w-xs min-w-full mb-4"/>
-            <button class="btn btn-primary w-full mb-4">generate</button>
+            <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full max-w-xs min-w-full mb-4 code-input"/>
+            <button class="btn btn-primary w-full mb-4 generate-btn">generate</button>
         </div>
         <div class="qr-code">
             <p>
@@ -30,5 +30,8 @@
             <ion-icon name="qr-code-outline" class="text-3xl mt-2"></ion-icon>
         </div>
     </div>
+
+    <!-- JS -->
+    <script src="js/main.js"></script>
 </body>
 </html>
