--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 Paste your text or URL and generate a QR code.
             </p>
         </header>
+        <div class="alert-container w-full mt-2 mb-3"></div>
         <div class="form">
             <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full max-w-xs min-w-full mb-4 code-input"/>
             <button class="btn btn-primary w-full mb-4 generate-btn">generate</button>
