update UI and add filesaver library

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div>
 
     <!-- JS -->
+    <script src="js/filesaver.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
