--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </header>
         <div class="alert-container w-full mt-2 mb-3 transition"></div>
         <div class="form">
-            <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full max-w-xs min-w-full mb-4 code-input"/>
+            <input type="text" placeholder="Type your text here..." class="input input-bordered input-primary w-full max-w-xs min-w-full mb-4 code-input"/>
             <button class="btn btn-primary w-full mb-4 generate-btn">generate</button>
         </div>
         <div class="qr-code">
